# gpsmond

./: CMakeLists.txt  README.md  gpsmon-installpkg.sh  main.c  mkpkg.sh
cmake/: FindGPSD.cmake
etc/ubuntuhome/.config/upstart/: gpsmon.conf
